[workspace]
members = [
    "ws-core",
    "lambdas/korabo-notification-worker",
    "lambdas/korabo-ws-default"
]
resolver = "2"

[workspace.dependencies]
aws-config = "1.8.18"
aws-sdk-dynamodb = "1.116.0"
aws_lambda_events = { version = "1.2.0", default-features = false, features = ["apigw", "sqs"] }
lambda_runtime = "1.2.1"
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros"] }