[workspace]
members = [
    "ws-core",
    "lambdas/korabo-notification-worker",
    "lambdas/korabo-ws-default",
    "lambdas/korabo-ws-connect",
    "lambdas/korabo-ws-disconnect"
]
resolver = "2"

[workspace.dependencies]
aws-config = { version = "1.8.18", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.116.0"
aws-sdk-apigatewaymanagement = "1.103.0"
lambda_runtime = "1.2.1"
aws_lambda_events = { version = "1.2.0", features = ["apigw", "sqs"] }
tokio = { version = "1.52.3", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_dynamo = { version = "4.3.0", features = ["aws-sdk-dynamodb+1"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.3", features = ["v4"] }
base64 = "0.22.1"
time = { version = "0.3.49", features = ["formatting", "macros"] }
jwt = { git = "https://github.com/AhmadAiman2013/korabo-common.git", tag = "0.11.0" }
claims = { git = "https://github.com/AhmadAiman2013/korabo-common.git", tag = "0.11.0" }
ws-core = { path = "ws-core" }