[package]
name = "korabo-notification-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-apigatewaymanagement = { workspace = true }
aws_lambda_events = { workspace = true }
lambda_runtime = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
ws-core = { workspace = true }